fixtures/cs-rng-01/bad/math-random-in-try-catch.ts
export function generateOtp() {
	try {
		return Math.random().toString().slice(2, 8);
	} catch {
		return "000000";
	}
}
